<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_label"/>

            <TextView
                android:id="@+id/text_tenth_floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tenth_floor_label"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">



            <Button
                android:drawableTop="@drawable/ic_male_black_24"
                android:id="@+id/button_1_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/bathroom_one_label"/>
            <Button
                android:drawableTop="@drawable/ic_wc_black_24"
                android:id="@+id/button_2_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/bathroom_two_label"/>
            <Button
                android:drawableTop="@drawable/ic_female_black_24"
                android:id="@+id/button_3_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/bathroom_three_label"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/seventh_floor_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:drawableTop="@drawable/ic_male_black_24"
                android:id="@+id/button_1_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/bathroom_one_label"/>
            <Button
                android:drawableTop="@drawable/ic_male_black_24"
                android:id="@+id/button_2_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/bathroom_two_label"/>
            <Button
                android:drawableTop="@drawable/ic_wc_black_24"
                android:id="@+id/button_3_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/bathroom_three_label"/>
            <Button
                android:drawableTop="@drawable/ic_female_black_24"
                android:id="@+id/button_4_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/bathroom_four_label"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>